Add support for PostgreSQL Transport (#4443)
* Bring sqlserver files in line with sqlserver transport to avoid confusion in naming

* First changes for PostgreSql transport

* nullable fix

* test fix

* manifest file test fix

* Added test project

* Do some random work on postgresql support

- Update query for current sequence value
- Update addressing types
- Update query for estimating queue length

* build fix

* fix setting value key

* remove unused code

* customise queue names with schema for postgres when provisioning queues

* added todo for something that errors

* removed commented out code

* connection validator for postgres

* Fix subscription table parameter for postgresql

* fix test

* Translate transport sending queues in instances

* fix test

* Change ToTransportQualifiedQueueNameCore to use double quotes

* use postgres customisation for error queue names

* alternative to get latest identity value for table that doesn't rely on current session increment

* revert double assigning of schema

* Use new alpha of the transport with fixed delay bug

* Add connection string default

* Translate queue names when using dispatcher directly in tests

* fix query to work with postgres syntax

* fix syntax issues (functionality still broken)

* fix RunScenario test

* Translate queues for forwarding message in Audit and Error ingestion

* attempt to get postgres running on ci

* added test category for psotgres

* update postgres env variable

* reverting app.config changes

* clarify not using nolock

* update connection string name so it matches existing ones

* Perform az login for postgres

* fix error catching on failed connection

* fix sqlserver tests

* query fix

* Fix indicator update for transports that display endpointname on SP, ie slq server and postgresql

* Translate throughput queue for sending from monitoring

* fix extra character

* Add test for th

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
     strategy:
       matrix:
         os: [windows-2022, ubuntu-22.04]
-        test-category: [ Default, SqlServer, AzureServiceBus, RabbitMQ, AzureStorageQueues, MSMQ, SQS, PrimaryRavenAcceptance, PrimaryRavenPersistence ]
+        test-category: [ Default, SqlServer, AzureServiceBus, RabbitMQ, AzureStorageQueues, MSMQ, SQS, PrimaryRavenAcceptance, PrimaryRavenPersistence, PostgreSQL ]
         include:
           - os: windows-2022
             os-name: Windows
@@ -65,7 +65,7 @@ jobs:
         run: Import-Module ./deploy/PowerShellModules/Particular.ServiceControl.Management
       - name: Azure login
         uses: azure/login@v2.2.0
-        if: matrix.test-category == 'AzureServiceBus' || matrix.test-category == 'AzureStorageQueues' || matrix.test-category == 'RabbitMQ'
+        if: matrix.test-category == 'AzureServiceBus' || matrix.test-category == 'AzureStorageQueues' || matrix.test-category == 'RabbitMQ' || matrix.test-category == 'PostgreSQL'
         with:
           creds: ${{ secrets.AZURE_ACI_CREDENTIALS }}
       - name: Setup SQL Server
@@ -74,6 +74,14 @@ jobs:
         with:
           connection-string-env-var: ServiceControl_TransportTests_SQL_ConnectionString
           catalog: nservicebus
+      - name: Setup PostgreSQL
+        uses: Particular/setup-postgres-action@v1.0.0
+        if: matrix.test-category == 'PostgreSQL'
+        with:          
+          connection-string-name: ServiceControl_TransportTests_PostgreSQL_ConnectionString
+          tag: ServiceControl
+          registry-username: ${{ secrets.DOCKERHUB_USERNAME }}
+          registry-password: ${{ secrets.DOCKERHUB_TOKEN }}  
       - name: Setup RabbitMQ
         uses: Particular/setup-rabbitmq-action@v1.7.0
         if: matrix.test-category == 'RabbitMQ'
