--- a/.github/workflows/container-integration-test.yml
+++ b/.github/workflows/container-integration-test.yml
@@ -22,6 +22,11 @@ jobs:
             connection-string: 'Server=mssql;Database=master;User=sa;Password=ServiceControl1!;Encrypt=False;'
             compose-cmd: docker compose -f servicecontrol.yml -f mssql.yml up -d
             expected-healthy-containers: 5
+          - name: postgresql
+            transport: PostgreSQL
+            connection-string: 'Host=postgres;Port=5432;Database=postgres;User ID=postgres;Password=ServiceControl1!;'
+            compose-cmd: docker compose -f servicecontrol.yml -f postgres.yml up -d
+            expected-healthy-containers: 5
           - name: asb
             transport: NetStandardAzureServiceBus
             compose-cmd: docker compose -f servicecontrol.yml up -d
