--- a/src/ServiceControl.Monitoring/App.config
+++ b/src/ServiceControl.Monitoring/App.config
@@ -17,6 +17,8 @@ These settings are only here so that we can debug ServiceControl while developin
     <!--<add key="Monitoring/TransportType" value="NetStandardAzureServiceBus" />-->
     <!--<add key="Monitoring/TransportType" value="RabbitMQ.QuorumConventionalRouting" />-->
     <!--<add key="Monitoring/TransportType" value="SQLServer" />-->
+    <!--<add key="Monitoring/TransportType" value="PostgreSQL" />-->
+    
   </appSettings>
   <connectionStrings>
     <!-- DEVS - Pick a transport connection string to match chosen transport above -->
@@ -42,5 +44,8 @@ These settings are only here so that we can debug ServiceControl while developin
 
     <!--SQLServer -->
     <!--<add name="NServiceBus/Transport" connectionString="Data Source=;Initial Catalog=nservicebus;Integrated Security=True;Queue Schema=myschema;Subscriptions Table=tablename@schema@catalog" />-->
+
+    <!--PostgreSQL -->
+    <!--<add name="NServiceBus/Transport" connectionString="Server=;Database=nservicebus;Port=5432;User Id=;Password=;" />-->
   </connectionStrings>
 </configuration>
