Clean up app.config files

--- a/src/ServiceControl/App.config
+++ b/src/ServiceControl/App.config
@@ -18,9 +18,9 @@ These settings are only here so that we can debug ServiceControl while developin
     <!--<add key="ServiceControl/TransportType" value="AzureStorageQueue" />-->
     <!--<add key="ServiceControl/TransportType" value="MSMQ" />-->
     <!--<add key="ServiceControl/TransportType" value="NetStandardAzureServiceBus" />-->
+    <!--<add key="ServiceControl/TransportType" value="PostgreSQL" />-->
     <!--<add key="ServiceControl/TransportType" value="RabbitMQ.QuorumConventionalRouting" />-->
     <!--<add key="ServiceControl/TransportType" value="SQLServer" />-->
-    <!--<add key="ServiceControl/TransportType" value="PostgreSQL" />-->
 
     <add key="ServiceControl/PersistenceType" value="RavenDB" />
   </appSettings>
@@ -43,13 +43,13 @@ These settings are only here so that we can debug ServiceControl while developin
     <!--NetStandardAzureServiceBus -->
     <!--<add name="NServiceBus/Transport" connectionString="Endpoint=sb://[namespace].servicebus.windows.net; SharedSecretIssuer=;SharedSecretValue=;QueueLengthQueryDelayInterval=;TopicName=default-is-bundle-1" />-->
 
+    <!--PostgreSQL -->
+    <!--<add name="NServiceBus/Transport" connectionString="Server=;Database=nservicebus;Port=5432;User Id=;Password=" />-->
+
     <!--RabbitMQ.QuorumConventionalRouting -->
     <!--<add name="NServiceBus/Transport" connectionString="host=;username=;password=" />-->
 
     <!--SQLServer -->
     <!--<add name="NServiceBus/Transport" connectionString="Data Source=;Initial Catalog=nservicebus;Integrated Security=True;Queue Schema=myschema;Subscriptions Table=tablename@schema@catalog" />-->
-
-    <!--PostgreSQL -->
-    <!--<add name="NServiceBus/Transport" connectionString="Server=;Database=nservicebus;Port=5432;User Id=;Password=;" />-->
   </connectionStrings>
 </configuration>
