--- a/src/ServiceControl.Audit/App.config
+++ b/src/ServiceControl.Audit/App.config
@@ -15,9 +15,9 @@ These settings are only here so that we can debug ServiceControl while developin
     <!--<add key="ServiceControl.Audit/TransportType" value="AzureStorageQueue" />-->
     <!--<add key="ServiceControl.Audit/TransportType" value="MSMQ" />-->
     <!--<add key="ServiceControl.Audit/TransportType" value="NetStandardAzureServiceBus" />-->
+    <!--<add key="ServiceControl.Audit/TransportType" value="PostgreSQL" />-->
     <!--<add key="ServiceControl.Audit/TransportType" value="RabbitMQ.QuorumConventionalRouting" />-->
     <!--<add key="ServiceControl.Audit/TransportType" value="SQLServer" />-->
-    <!--<add key="ServiceControl.Audit/TransportType" value="PostgreSQL" />-->
 
     <!-- DEVS - Pick a persistence to run Auditing instance on. -->
     <add key="ServiceControl.Audit/PersistenceType" value="InMemory" />
@@ -42,13 +42,13 @@ These settings are only here so that we can debug ServiceControl while developin
     <!--NetStandardAzureServiceBus -->
     <!--<add name="NServiceBus/Transport" connectionString="Endpoint=sb://[namespace].servicebus.windows.net; SharedSecretIssuer=;SharedSecretValue=;QueueLengthQueryDelayInterval=;TopicName=default-is-bundle-1" />-->
 
+    <!--PostgreSQL -->
+    <!--<add name="NServiceBus/Transport" connectionString="Server=;Database=nservicebus;Port=5432;User Id=;Password=" />-->
+
     <!--RabbitMQ.QuorumConventionalRouting -->
     <!--<add name="NServiceBus/Transport" connectionString="host=;username=;password=" />-->
 
     <!--SQLServer -->
     <!--<add name="NServiceBus/Transport" connectionString="Data Source=;Initial Catalog=nservicebus;Integrated Security=True;Queue Schema=myschema;Subscriptions Table=tablename@schema@catalog" />-->
-
-    <!--PostgreSQL -->
-    <!--<add name="NServiceBus/Transport" connectionString="Server=;Database=nservicebus;Port=5432;User Id=;Password=;" />-->
   </connectionStrings>
 </configuration>
